# software-eng-pipeline

./: Dockerfile  build.py  pyproject.toml
.github/workflows/: python-ci.yml
src/main/python/: calc.py
src/tests/test_python/: test_calc.py
src/unittest/python/: test_calc.py  testcalc.py
