[build-system]
requires = ["pybuilder>=0.12.0"]
build-backend = "pybuilder.pep517"


[tool.pybuilder]
project_name = "Calculator"
project_version = "0.1"
source_directories = ["src/main/python"]
unit_test_source_directories = ["src/unittest/python"]


[tool.pybuilder.plugins]
pybuilder_pytest_plugin_version = "1.0.1"