[build-system]
requires = ["pybuilder>=0.12.0"]
build-backend = "pybuilder.pep517"

[tool.pybuilder]
project_name = "calculator"
project_version = "1.0"
source_directories = ["src/main/python"]
unit_test_source_directories = ["src/tests/test_python"]

[tool.pybuilder.plugins]
pybuilder_pytest_plugin_version = "1.0.1"